--- a/index.html
+++ b/index.html
@@ -12,24 +12,35 @@
 <div class="paper heart">
 
 </div>
+<div class="balloon">
+<img class="balloonimg1" src="images/b1.png" alt="">
+<img class="balloonimg2" src="images/b2.png" alt="">
+<img class="balloonimg3" src="images/b1.png" alt="">
+<img class="balloonimg4" src="images/b2.png" alt="">
+<img class="balloonimg5" src="images/b1.png" alt="">
+<img class="balloonimg6" src="images/b2.png" alt="">
+<img class="balloonimg7" src="images/b1.png" alt="">
+<img class="balloonimg8" src="images/b2.png" alt="">
+</div>
 
   
 <div class="paper image">
-  <p> and I fallen in</p>
-    <p>Love with You 😍 </p>
-   <img src="images/1.jpeg" />
+  <p> and You Always</p>
+    <p>My best persion 😍 </p>
+   <img src="images/rs5.jpg" />
 </div>
 
 <div class="paper image">
-  <p</p>
-  <img src="images/2.jpeg" />
+  <p>How can be </p>
+  <p> someone so cute ❤️ </p>
+  <img src="images/rs1.jpg" />
 </div>
 
 <div class="paper image">
   <p>How can be </p>
    <p> someone so cute ❤️ </p>
 
-  <img src="images/3.jpg" />
+  <img class="sizeimg" src="images/rs4.jpg" />
 </div>
 
 
@@ -49,6 +60,6 @@
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
-
+  <!-- <script  src="./mobile.js"></script> -->
 </body>
 </html>
